<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.card.RegisterCardFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/pendaftaran_kartu_nasabah"
                android:layout_marginBottom="16dp"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />
            <Spinner
                android:id="@+id/sp_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_spinner"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/edt_id_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="8"
                android:hint="@string/id_kartu"
                android:autofillHints="@string/id_kartu"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:background="@drawable/bg_round_white" />
            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="40dp"
                android:paddingLeft="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_round_green"
                android:text="@string/kirim"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textSize="20sp"
                android:layout_marginTop="24dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>